--- a/templates/index.html
+++ b/templates/index.html
@@ -37,11 +37,12 @@
             }
 
         </style>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     </head>
 
     <body>
         <div id="container">
-        <h1>Jovian Careers</h1>
+        <h1>{{company_name}} Careers</h1>
         <img id="banner" src="static/banner.jpg" height=100 width=200>
         <h2>About Jovian</h2>
         <p class="bodytext">Lorem ipsum odor amet, consectetuer adipiscing elit. Per auctor ultricies pellentesque faucibus eu mi ipsum. Nulla praesent mi cubilia semper accumsan. Quam risus condimentum est duis; etiam suscipit porttitor. Venenatis dapibus sodales himenaeos; consectetur dis fermentum inceptos ridiculus. Ex placerat senectus aliquam porta egestas. Iaculis vel mollis felis maecenas congue venenatis litora placerat ridiculus.
@@ -55,9 +56,18 @@
             Orci sed hendrerit adipiscing efficitur maecenas himenaeos. Magna condimentum suscipit sociosqu varius himenaeos maecenas accumsan aliquam id. Magnis vehicula quis elementum bibendum mollis justo justo viverra. Morbi id nulla parturient, faucibus velit nec blandit. Ridiculus potenti proin ornare eu euismod sollicitudin aenean. Bibendum dolor taciti malesuada suscipit nullam eget vivamus diam lorem. Cursus elit fermentum molestie euismod eleifend risus ac vulputate. Vulputate pulvinar torquent magnis suscipit amet platea pretium conubia. Risus mattis sit risus condimentum netus mi aliquam.</p>
 
             <h2>Open Positions</h2>
-            <p class="bodytext">TO DO</p>
+            <p class="bodytext"></p>
+                <div>
+                {%for job in jobs%}
+                {% include "jobitem.html" %}
+                
+                <hr>
+                {%endfor%}
+                </div>
+                
+            
             <div style="text-align:center;">
-            <button >Contact Us</p>
+            <button >Contact Us</button>
             </div>
 
             </div>
