--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,9 @@
 
             #banner{
                 width:100%;
-                height:360;
+                height:400;
+                margin-bottom:30;
+                
                 <!--object-fit:cover-->
             }
 
@@ -41,9 +43,10 @@
     </head>
 
     <body>
+        {%include 'nav.html'%}
+        <img id="banner" src="static/banner.jpg" height=100 width=200>
         <div id="container">
         <h1>{{company_name}} Careers</h1>
-        <img id="banner" src="static/banner.jpg" height=100 width=200>
         <h2>About Jovian</h2>
         <p class="bodytext">Lorem ipsum odor amet, consectetuer adipiscing elit. Per auctor ultricies pellentesque faucibus eu mi ipsum. Nulla praesent mi cubilia semper accumsan. Quam risus condimentum est duis; etiam suscipit porttitor. Venenatis dapibus sodales himenaeos; consectetur dis fermentum inceptos ridiculus. Ex placerat senectus aliquam porta egestas. Iaculis vel mollis felis maecenas congue venenatis litora placerat ridiculus.
 
@@ -71,6 +74,8 @@
             </div>
 
             </div>
+
+            {%include 'footer.html'%}
 
     </body>
     </html>
