--- a/templates/jobitem.html
+++ b/templates/jobitem.html
@@ -14,7 +14,9 @@
 {%endif%}
 </div>
 <div class="col-3">
-    <button >Apply</button>
+    <a href="mailto:hello@jovian.ai?subject=Application for {{job['title']}}"
+    type="button" class="btn btn-outline-primary float-right align-middle">Apply</a>
+    
     </div>
     
 </div>
